--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Send AJAX requests easily",
   "main": "AjaxSender.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"preversion": "jsdoc . -R README.md -c docs/jsdoc-conf.json && git add * || true"
   },
   "repository": {
     "type": "git",
