--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/Zenoo/ajax-sender/issues"
   },
-  "homepage": "https://github.com/Zenoo/ajax-sender#readme"
+  "homepage": "https://github.com/Zenoo/ajax-sender#readme",
+  "devDependencies": {
+    "tern": "^0.23.0"
+  },
+  "dependencies": {}
 }
