--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "AjaxSender.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "preversion": "jsdoc . -R README.md -c docs/jsdoc-conf.json && git add * || true"
+    "preversion": "webpack && jsdoc . -R README.md -c docs/jsdoc-conf.json && git add * || true"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,18 @@
   },
   "homepage": "https://github.com/Zenoo/ajax-sender#readme",
   "devDependencies": {
-    "tern": "^0.23.0"
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "css-loader": "^2.1.1",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "style-loader": "^0.23.1",
+    "tern": "^0.23.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {}
 }
