--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "AjaxSender.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "preversion": "jsdoc . -R README.md -c docs/jsdoc-conf.json && git add * || true"
+    "build": "babel AjaxSender.js -o AjaxSender.min.js && jsdoc . -R README.md -c docs/jsdoc-conf.json && git add -A . && git commit -m 'chore: Docs generation'",
+    "release": "npm run build && standard-version"
   },
   "repository": {
     "type": "git",
@@ -24,8 +25,15 @@
     "url": "https://github.com/Zenoo/ajax-sender/issues"
   },
   "homepage": "https://github.com/Zenoo/ajax-sender#readme",
-  "devDependencies": {},
   "dependencies": {
     "xmlhttprequest": "^1.8.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "babel-preset-minify": "^0.5.1",
+    "jsdoc": "^3.6.7",
+    "standard-version": "^9.3.0"
   }
 }
